tests/ui/impl-trait/opaque-cast-field-access-in-future.stderr
error[E0283]: type annotations needed
  --> $DIR/opaque-cast-field-access-in-future.rs:22:17
   |
LL | fn run() -> Foo<impl Future<Output = ()>> {
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
LL |
LL |     loop {}
   |     ------- return type was inferred to be `!` here
   |
   = note: cannot satisfy `_: Future`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
